change get one to get by id in dao